force-app/main/default/objects/Trade_In_Record__c/Trade_In_Record__c.object-meta.xml
<CustomObject>
    <label>Trade In Record</label>
    <nameField>
        <displayFormat>TIR-{0000}</displayFormat>
        <label>Trade In Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trade In Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>