force-app/main/default/objects/Trade_In_Record__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Trade In Records</relationshipLabel>
    <relationshipName>Trade_In_Records</relationshipName>
    <type>Lookup</type>
</CustomField>