force-app/main/default/objects/Trade_In_Record__c/fields/Total_Applied__c.field-meta.xml
<CustomField>
    <fullName>Total_Applied__c</fullName>
    <formula>Total_Value__c  -  Lien_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>